index.html fancy styling :P

--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ThreeJs Sandbox</title>
+    <style>
+        h3 {
+           text-align: center; 
+        }
+    </style>
 </head>
 <body>
-    TODO: Add some examples
+    <h3>
+        TODO: Add some examples
+    </h3>
 </body>
 </html>
