--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 <body>
     <h3>
         TODO: Add some examples
+        
+        Jekyll test:
+        <h1>{{ "Hello World!" | downcase }}</h1>
     </h3>
 </body>
 </html>
