changes in index and readme

--- a/index.html
+++ b/index.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ThreeJs Sandbox</title>
     <style>
+        body {
+            background-color: black;
+            color: white;
+        }
+
         h3 {
-           text-align: center; 
+            text-align: center;
         }
     </style>
 </head>
+
 <body>
     <h3>
-        TODO: Add some examples
-        
-        Jekyll test:
-        <h1>{{ "Hello World!" | downcase }}</h1>
+        TODO: Add some examples !!!
     </h3>
+    Jekyll test:
+    <h1>{{ "Hello World!" | downcase }}</h1>
 </body>
 </html>
