--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+---
+title: ThreeJs Sandbox
+---
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,7 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>ThreeJs Sandbox</title>
+    <title>{{ page.title }}</title>
     <style>
         body {
             background-color: black;
