added 01 hello world

--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@ title: ThreeJs Sandbox
 
 <body>
     <h3>
-        TODO: Add some examples !!!
+        {{page.title}}
     </h3>
-    Jekyll test:
-    <h1>{{ "Hello World!" | downcase }}</h1>
+    <a href="./01-hello-world/">Hello world 01</a>
 </body>
 </html>
