--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
----
-title: ThreeJs Sandbox
----
 <!DOCTYPE html>
 <html lang="en">
 
@@ -8,14 +5,56 @@ title: ThreeJs Sandbox
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{{ page.title }}</title>
+    <title>ThreeJs Sandbox</title>
     <style>
         body {
             background-color: black;
+            background-image: linear-gradient(to bottom right, rgb(53, 66, 78), rgb(31, 41, 39));
             color: white;
+            height: 100vh;
+        }
+
+        .flex-container {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+
+        .flex-container>div {
+            display: flex;
+            flex-direction: column;
+            margin: 15px;
+            transition: all 0.3s ease-in-out;
+            box-shadow: 5px 5px 5px black;
+            background: black;
+        }
+
+        .flex-container>div:hover {
+            transform: scale(1.05);
+            box-shadow: 10px 10px 10px black;
+        }
+
+        iframe {
+            max-width: 30vw;
+            max-height: 30vh;
+            border: none;
+
+        }
+
+        @media screen and (max-width: 600px) {
+            iframe {
+                max-width: 100vw;
+                max-height: 100vh;
+            }
         }
 
         h3 {
+            text-align: center;
+        }
+
+        a {
+            color: skyblue;
             text-align: center;
         }
     </style>
@@ -23,8 +62,18 @@ title: ThreeJs Sandbox
 
 <body>
     <h3>
-        {{page.title}}
+        ThreeJs Sandbox
     </h3>
-    <a href="./01-hello-world/">Hello world 01</a>
+    <div class="flex-container">
+        <div>
+            <iframe src="./01-hello-world/index.html"></iframe>
+            <a href="./01-hello-world/">Hello world 01</a>
+        </div>
+        <div>
+            <iframe src="./01-hello-world/index.html"></iframe>
+            <a href="./01-hello-world/">Hello world 01</a>
+        </div>
+    </div>
 </body>
+
 </html>
