--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <style>
         body {
-            background-color: black;
-            background-image: linear-gradient(to bottom right, rgb(53, 66, 78), rgb(31, 41, 39));
+            background-color:  rgb(14, 64, 83);
+            /* background-image: linear-gradient(to bottom right, rgb(53, 66, 78), rgb(31, 41, 39)); */
+            background-image: repeating-radial-gradient(rgb(25, 112, 146), rgb(14, 64, 83) 80%, #000 130%);
             color: white;
             height: 100vh;
             font-family: 'Roboto', sans-serif;
+            overflow: auto;
         }
 
         .flex-container {
@@ -28,18 +30,30 @@
             flex-direction: column;
             margin: 15px;
             transition: all 0.3s ease-in-out;
-            box-shadow: 5px 5px 5px black;
+            box-shadow: 5px 5px 5px rgb(44, 131, 80);
             background: black;
             border-radius: 10px;
             overflow: hidden;
+            animation: example 5s ease-in-out 0s infinite alternate;
         }
 
         .flex-container>div:hover {
             transform: scale(1.05);
-            box-shadow: 10px 10px 10px black;
+            box-shadow: 10px 10px 10px rgb(44, 96, 131);
         }
 
-        iframe {
+        @keyframes example {
+            from {
+                box-shadow: 0 0 5px 5px rgb(44, 131, 80);
+
+            }
+
+            to {
+                box-shadow: 0 0 7px 7px rgb(44, 96, 131);
+            }
+        }
+
+        img {
             max-width: 30vw;
             max-height: 30vh;
             border: none;
@@ -47,7 +61,7 @@
         }
 
         @media screen and (max-width: 600px) {
-            iframe {
+            img {
                 max-width: 100vw;
                 max-height: 100vh;
             }
@@ -71,11 +85,13 @@
     </h2>
     <div class="flex-container">
         <div>
-            <iframe src="./01-hello-world/index.html"></iframe>
+            <img src="01-hello-world/screen.png" alt="screenshot" />
+            <!-- <iframe src="./01-hello-world/index.html"></iframe> -->
             <a href="./01-hello-world/">Hello world 01</a>
         </div>
         <div>
-            <iframe src="./01-hello-world/index.html"></iframe>
+            <img src="01-hello-world/screen.png" alt="screenshot" />
+            <!-- <iframe src="./01-hello-world/index.html"></iframe> -->
             <a href="./01-hello-world/">Hello world 01</a>
         </div>
     </div>
