--- a/01-hello-world/index.html
+++ b/01-hello-world/index.html
@@ -6,52 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Hello World 01</title>
-    <style>
-        body {
-            margin: 0;
-        }
-
-        canvas {
-            width: 100%;
-            height: 100%;
-        }
-
-        h3 {
-            position: absolute;
-            width: 100%;
-            color: white;
-            text-align: center;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/108/three.js"></script>
 </head>
 
 <body>
     <h3>Hello world 01</h3>
-    <script>
-        let scene = new THREE.Scene();
-        let camera = new THREE.PerspectiveCamera(60, window.innerWidth / window.innerHeight, 0.1, 1000);
-        let renderer = new THREE.WebGLRenderer();
-        renderer.setSize(window.innerWidth, window.innerHeight);
-        document.body.appendChild(renderer.domElement);
-
-        let geometry = new THREE.BoxGeometry(1, 1, 1);
-        let material = new THREE.MeshNormalMaterial();
-        let cube = new THREE.Mesh(geometry, material);
-        scene.add(cube);
-
-        camera.position.z = 5;
-
-        function animate() {
-            requestAnimationFrame(animate);
-
-            cube.rotation.x += 0.01;
-            cube.rotation.y += 0.01;
-
-            renderer.render(scene, camera);
-        }
-        animate();
-    </script>
+    <script src="main.js"></script>
 </body>
 
 </html>
