changed main index.html

--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
             color: skyblue;
             text-align: center;
             background-color: rgb(22, 24, 24);
+            display: flex;
+            flex-direction: column;
         }
     </style>
 </head>
@@ -85,14 +87,10 @@
     </h2>
     <div class="flex-container">
         <div>
-            <img src="01-hello-world/screen.png" alt="screenshot" />
-            <!-- <iframe src="./01-hello-world/index.html"></iframe> -->
-            <a href="./01-hello-world/">Hello world 01</a>
-        </div>
-        <div>
-            <img src="01-hello-world/screen.png" alt="screenshot" />
-            <!-- <iframe src="./01-hello-world/index.html"></iframe> -->
-            <a href="./01-hello-world/">Hello world 01</a>
+            <a href="./01-hello-world/">
+                <img src="01-hello-world/screen.png" alt="screenshot" />
+                Hello world 01
+            </a>
         </div>
     </div>
 </body>
