added 02 sonda progress

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <style>
         body {
-            background-color:  rgb(14, 64, 83);
+            background-color: rgb(14, 64, 83);
             /* background-image: linear-gradient(to bottom right, rgb(53, 66, 78), rgb(31, 41, 39)); */
             background-image: repeating-radial-gradient(rgb(27, 137, 180), rgb(14, 64, 83) 80%, #000 130%);
             color: white;
@@ -90,6 +90,12 @@
             <a href="./01-hello-world/">
                 <img src="01-hello-world/screen.png" alt="screenshot" />
                 Hello world 01
+            </a>
+        </div>
+        <div>
+            <a href="./02-sonda-progress/">
+                <img src="02-sonda-progress/screen.png" alt="screenshot" />
+                Sonda progress
             </a>
         </div>
     </div>
