added some postprocessing

--- a/02-sonda-progress/index.html
+++ b/02-sonda-progress/index.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Sonda Progress</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/108/three.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/108/three.js"></script> -->
+
+    <script src="//cdn.rawgit.com/mrdoob/three.js/r108/build/three.js"></script>
+    <script src="//cdn.rawgit.com/mrdoob/three.js/r108/examples/js/postprocessing/EffectComposer.js"></script>
+
+    <script src="//cdn.rawgit.com/mrdoob/three.js/r108/examples/js/shaders/CopyShader.js"></script>
+    <script src="//cdn.rawgit.com/mrdoob/three.js/r108/examples/js/postprocessing/ShaderPass.js"></script>
+    <script src="//cdn.rawgit.com/mrdoob/three.js/r108/examples/js/postprocessing/RenderPass.js"></script>
+    <script src="//cdn.rawgit.com/mrdoob/three.js/r108/examples/js/postprocessing/GlitchPass.js"></script>
+    <script src="//cdn.rawgit.com/mrdoob/three.js/r108/examples/js/shaders/DigitalGlitch.js"></script>
+    <script src="//cdn.rawgit.com/mrdoob/three.js/r108/examples/js/postprocessing/UnrealBloomPass.js"></script>
+    <script src="//cdn.rawgit.com/mrdoob/three.js/r108/examples/js/shaders/LuminosityHighPassShader.js"></script>
+
+    
 </head>
+
 <body>
- <script src="main.js"></script>
+    <script src="chromatic-abberation.js"></script>
+    <script src="main.js"></script>
 </body>
+
 </html>
