--- a/02-sonda-progress/index.html
+++ b/02-sonda-progress/index.html
@@ -19,7 +19,7 @@
     <script src="//cdn.rawgit.com/mrdoob/three.js/r108/examples/js/shaders/DigitalGlitch.js"></script>
     <script src="//cdn.rawgit.com/mrdoob/three.js/r108/examples/js/postprocessing/UnrealBloomPass.js"></script>
     <script src="//cdn.rawgit.com/mrdoob/three.js/r108/examples/js/shaders/LuminosityHighPassShader.js"></script>
-
+    <script src="//cdn.rawgit.com/mrdoob/three.js/r108/examples/js/shaders/FXAAShader.js"></script>
     
 </head>
 
