new starfield example

--- a/index.html
+++ b/index.html
@@ -98,6 +98,12 @@
                 Sonda progress
             </a>
         </div>
+        <div>
+            <a href="./03-starfield/">
+                <img src="03-starfield/screen.png" alt="screenshot" />
+                Starfield
+            </a>
+        </div>
     </div>
 </body>
 
